# Assignments

./: .gitignore
WSL/VeusTech/: CMakeLists.txt  CMakeSettings.json  PreLoad.cmake  README.md
WSL/VeusTech/docs/: Complete Blood Count Exam.txt  HowToBuild.txt
WSL/VeusTech/src/: HemAnaGen.cpp  HemAnaGen.hpp  PreCompH.hpp  RdwDecoder.cpp  RdwDecoder.hpp  StdCinUtil.cpp  StdCinUtil.hpp  VeusMain.cpp
WSL/VeusTech/tests/: CMakeLists.txt
WSL/VeusTech/tests/src/: RdwDecoderTests.cpp  VeusMainTests.cpp
Windows/CoreDataApp/: Bipartite Matching.txt  Build.bat  CoreDataApp.cpp  CoreDataApp.sln  CoreDataApp.vcxproj  HttpRequest.cpp  HttpRequest.h  JsonUnit.cpp  JsonUnit.h  Maths.cpp  Maths.h  SomeFile.json  StdAfx.h  TypesDefs.h  VCPKG_INSTALLED.txt
Windows/Loadsmart/PyLoadsmart/: LawOfCosines.py  Loadsmart.py  Main.py  Parser.py
Windows/Loadsmart/UrlShortener/Code/: UrlShortener.cpp  UrlShortener.sln  UrlShortener.vcxproj
Windows/MachinesSystemInfo/: Design.doc  ReadMe.txt
Windows/MachinesSystemInfo/Binaries/Machine_1/: client.config.xml
Windows/MachinesSystemInfo/Binaries/Machine_2/: client.config.xml
Windows/MachinesSystemInfo/Binaries/Machine_3/: client.config.xml
Windows/MachinesSystemInfo/Source/Scripts/: MachinesSystemInfo.sql
Windows/StockTraderTerminal/: Design.doc  ReadMe.txt
Windows/StockTraderTerminal/Binaries/: RESTfullClient.bat
Windows/StockTraderTerminal/Source/Scripts/: StockExchange.sql
Windows/StolenVehicles/: Design.doc  ReadMe.txt
Windows/StolenVehicles/Source/Docs/: ReadMe.doc
Windows/StolenVehicles/Source/Scripts/: NationalStolenVehicles.sql
Windows/TheBrokenCode/Code/: Assignment.sln
Windows/TheBrokenCode/Code/ClientApp/: ClientApp.cpp  ClientApp.vcxproj
Windows/TheBrokenCode/Code/GoogleMock/: GoogleMock.vcxproj
Windows/TheBrokenCode/LoggingSystem/: ReadMe.txt
Windows/TheBrokenCode/Q & A/: AnswersQ1.txt  AnswersQ2.txt  AnswersQ3.txt  AnswersQ4.txt  AnswersQ5.txt  AnswersQ6.txt  CI&CD End To End.gliffy  Hard Technical Problem.gliffy
Windows/UPlayPC Elevator Test/: Build.bat  ClassDiagram.cd  ReadMe.txt  Thought Process.txt  UPlayC++ElevatorTest.sln  UPlayC++ElevatorTest.vcxproj
(+187 files in other folders)
